<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable
            name="todo"
            type="com.example.todoapp.model.Todo" />
        <variable
            name="radioListener"
            type="com.example.todoapp.view.RadioClickListener" />
        <variable
            name="listener"
            type="com.example.todoapp.view.SaveChangesListerner" />
    </data>
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".view.CreateTodoFragment">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <RadioGroup
                android:id="@+id/radioGroupPriority"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:checkedButton="@id/radioHigh"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView2">

                <RadioButton
                    android:id="@+id/radioHigh"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:checked="@{todo.priority==3?true:false}"
                    android:onClick="@{(view) -> radioListener.onRadioClick(view, todo)}"
                    android:tag="3"
                    android:text="@string/high_priority" />

                <RadioButton
                    android:id="@+id/radioMedium"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:checked="@{todo.priority==2?true:false}"
                    android:onClick="@{(view) -> radioListener.onRadioClick(view, todo)}"
                    android:tag="2"
                    android:text="@string/medium_priority" />

                <RadioButton
                    android:id="@+id/radioLow"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:checked="@{todo.priority==1?true:false}"
                    android:onClick="@{(view) -> radioListener.onRadioClick(view, todo)}"
                    android:tag="1"
                    android:text="@string/low_priority" />
            </RadioGroup>

            <TextView
                android:id="@+id/txtJudulTodo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="24dp"
                android:text="@string/edit_todo"
                android:textSize="36sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="24dp"
                android:hint="@string/enter_todo_titile"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtJudulTodo">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/txtTitle"
                    android:text="@={todo.title}"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayout2"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="24dp"
                android:hint="@string/enter_notes"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textInputLayout">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/txtNotes"
                    android:text="@={todo.notes}"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/btnAdd"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="24dp"
                android:text="@string/save_changes"
                android:onClick="@{(view) -> listener.onSaveChanges(view, todo)}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/radioGroupPriority" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="24dp"
                android:text="@string/priority"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textInputLayout2" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </FrameLayout>
</layout>